# palautusrepositorio

./: README.md  test.md
viikko2/nhl-reader/: pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_statistics.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: MERGE.md
